src/objects/User.object
<CustomObject>
    <fields>
        <fullName>BigMachines__Access_Type__c</fullName>
        <description>This picklist contains the possible access types that are available to BigMachines users.  If you wish to restrict the values that users may select from this list, it is recommended that you create a validation rule.  Modifying this list may break the user integration to BigMachines.</description>
        <label>Access Type</label>
        <picklist>
            <controllingField>BigMachines__Association_to_Organization__c</controllingField>
            <picklistValues>
                <fullName>FullAccess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesAgent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ChannelAgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BuyAccess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RestrictedAccess</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BigMachines__Association_to_Organization__c</fullName>
        <description>This picklist contains the possible associations that users can have to the primary organization.  If you wish to restrict the values that users may select from this list, it is recommended that you create a validation rule.  Modifying this list may break the user integration to BigMachines.</description>
        <label>Association to Organization</label>
        <picklist>
            <picklistValues>
                <fullName>Internal User</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partner User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BigMachines__Bulk_Synchronization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this field to True will suspend synchronization between Salesforce and BigMachines for this user.  This is useful when you want to update many users at once (via the Salesforce data loader for example).  Instead of sending a separate SOAP call to BigMachines for each user, Salesforce will send a single SOAP call for all users that have this flag set to True.  To update many users at once, download the users using the data loader and then set this field to True for all the users that you want to sync.  Be sure to update any other fields you wish on those users and upload the data back.  Then go to BigMachines Site Setup and click the &apos;Bulk Synchronize&apos; button.  Users that have the &apos;Synchronize with BigMachines&apos; flag set to True will be provisioned or updated and those that have it set to False will be de-provisioned.</description>
        <inlineHelpText>If you want to update and synchronize many users at once, you can do so by using the Salesforce Data Loader and the BigMachines Bulk Synchronize feature.  Read this field&apos;s description or check the BigMachines Implementation Guide for more information.</inlineHelpText>
        <label>Suspend BigMachines Synchronization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Currency_Preference__c</fullName>
        <description>This picklist contains the possible currency preferences that are available to BigMachines users.  You will need to manually update this picklist with the possible options that are available in your BigMachines instance.</description>
        <label>Currency Preference</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BigMachines__Date_Time_Format__c</fullName>
        <description>This picklist contains the possible date/time format options that are available to BigMachines users.  Do not modify this list.</description>
        <label>Date/Time Format</label>
        <picklist>
            <picklistValues>
                <fullName>MM/dd/yyyy h:mm a</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MM/dd/yyyy HH:mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd/MM/yyyy HH:mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd.MM.yyyy HH:mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>yyyy/MM/dd HH:mm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BigMachines__Delegated_Approver__c</fullName>
        <description>This field allows you to specify a delegated approver in BigMachines.  The delegated approver feature was introduced in BigMachines 11.1.  Therefore, this field should be left blank if you are using an earlier version of BigMachines.</description>
        <inlineHelpText>If you&apos;d like to have a delegated approver in BigMachines, select that user here.  Please note that the user you select must already be provisioned in BigMachines.</inlineHelpText>
        <label>BigMachines Delegated Approver</label>
        <relationshipName>Approval_Delegator</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>BigMachines__Language_Preference__c</fullName>
        <description>This picklist contains the possible language preferences that are available to BigMachines users.  You will need to manually update this picklist with the possible options that are available in your BigMachines instance.</description>
        <label>Language Preference</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BigMachines__Login__c</fullName>
        <description>This is the value of the BigMachines user login.  It is derived by looking at the part of the Username field before the &apos;@&apos; symbol and removing all special characters.  If the result is fewer than three characters, underscores &apos;_&apos; are added at the end to make it long enough.</description>
        <formula>IF(LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LEFT(Username, FIND(&quot;@&quot;, Username)-1),&quot;~&quot;, &quot;&quot;),&quot;`&quot;, &quot;&quot;),&quot;!&quot;, &quot;&quot;),&quot;#&quot;, &quot;&quot;),&quot;$&quot;, &quot;&quot;),&quot;%&quot;, &quot;&quot;),&quot;^&quot;, &quot;&quot;),&quot;&amp;&quot;, &quot;&quot;),&quot;*&quot;, &quot;&quot;),&quot;(&quot;, &quot;&quot;),&quot;)&quot;, &quot;&quot;),&quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),&quot;=&quot;, &quot;&quot;),&quot;{&quot;, &quot;&quot;),&quot;[&quot;, &quot;&quot;),&quot;}&quot;, &quot;&quot;),&quot;]&quot;, &quot;&quot;),&quot;|&quot;, &quot;&quot;),&quot;&apos;&quot;, &quot;&quot;),&quot;.&quot;, &quot;&quot;),&quot;?&quot;, &quot;&quot;),&quot;/&quot;, &quot;&quot;)) &lt; 3,RPAD(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LEFT(Username, FIND(&quot;@&quot;, Username)-1),&quot;~&quot;, &quot;&quot;),&quot;`&quot;, &quot;&quot;),&quot;!&quot;, &quot;&quot;),&quot;#&quot;, &quot;&quot;),&quot;$&quot;, &quot;&quot;),&quot;%&quot;, &quot;&quot;),&quot;^&quot;, &quot;&quot;),&quot;&amp;&quot;, &quot;&quot;),&quot;*&quot;, &quot;&quot;),&quot;(&quot;, &quot;&quot;),&quot;)&quot;, &quot;&quot;),&quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),&quot;=&quot;, &quot;&quot;),&quot;{&quot;, &quot;&quot;),&quot;[&quot;, &quot;&quot;),&quot;}&quot;, &quot;&quot;),&quot;]&quot;, &quot;&quot;),&quot;|&quot;, &quot;&quot;),&quot;&apos;&quot;, &quot;&quot;),&quot;.&quot;, &quot;&quot;),&quot;?&quot;, &quot;&quot;),&quot;/&quot;, &quot;&quot;),3, &quot;_&quot;),SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LEFT(Username, FIND(&quot;@&quot;, Username)-1),&quot;~&quot;, &quot;&quot;),&quot;`&quot;, &quot;&quot;),&quot;!&quot;, &quot;&quot;),&quot;#&quot;, &quot;&quot;),&quot;$&quot;, &quot;&quot;),&quot;%&quot;, &quot;&quot;),&quot;^&quot;, &quot;&quot;),&quot;&amp;&quot;, &quot;&quot;),&quot;*&quot;, &quot;&quot;),&quot;(&quot;, &quot;&quot;),&quot;)&quot;, &quot;&quot;),&quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),&quot;=&quot;, &quot;&quot;),&quot;{&quot;, &quot;&quot;),&quot;[&quot;, &quot;&quot;),&quot;}&quot;, &quot;&quot;),&quot;]&quot;, &quot;&quot;),&quot;|&quot;, &quot;&quot;),&quot;&apos;&quot;, &quot;&quot;),&quot;.&quot;, &quot;&quot;),&quot;?&quot;, &quot;&quot;),&quot;/&quot;, &quot;&quot;))</formula>
        <label>BigMachines Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Number_Format__c</fullName>
        <description>This picklist contains the possible number formats that are available to BigMachines users.  Do not modify this list.</description>
        <label>Number Format</label>
        <picklist>
            <picklistValues>
                <fullName>####.##</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>####,##</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BigMachines__Partner_Organization__c</fullName>
        <description>This field contains the variable name of the partner organization to which this partner user is associated in BigMachines.</description>
        <formula>IF( (Text(BigMachines__Association_to_Organization__c) == &apos;Partner User&apos;) , Contact.Account.BigMachines__Partner_Organization__c, &apos;&apos;)</formula>
        <label>Partner Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Provisioned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that there is a BigMachines user that has been linked to this Salesforce user.</description>
        <inlineHelpText>Check this box to establish a link between this Salesforce user and BigMachines.  Linked users will not be prompted to enter login credentials when accessing BigMachines to create and edit quotes.</inlineHelpText>
        <label>Synchronize with BigMachines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Time_Zone__c</fullName>
        <description>This picklist contains the possible time zones that are available to BigMachines users.  Do not modify this list.</description>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>(GMT-11:00 GMT-11:00) Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-10:00 GMT-10:00) Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-10:00 GMT-9:00) Aleutian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-9:30 GMT-9:30) Marquesas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-9:00 GMT-9:00) Gambier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-9:00 GMT-8:00) Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-8:00 GMT-8:00) Pitcairn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-8:00 GMT-7:00) US Pacific Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-7:00 GMT-7:00) Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-7:00 GMT-6:00) Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-6:00 GMT-6:00) Saskatchewan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-6:00 GMT-5:00) US Central Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-5:00 GMT-5:00) Indianapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-5:00 GMT-4:00) US Eastern Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-4:00 GMT-4:00) Puerto Rico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-3:00 GMT-4:00) Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-4:00 GMT-3:00) Canada Atlantic Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-3:00 GMT-3:00) Buenos Aires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-3:30 GMT-2:30) Newfoundland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-2:00 GMT-3:00) Sao Paulo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-2:00 GMT-2:00) Brazil/DeNoronha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-1:00 GMT-1:00) Cape Verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT-1:00 GMT+0:00) Azores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+0:00 GMT+0:00) GMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+0:00 GMT+1:00) London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+1:00 GMT+1:00) Algiers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+2:00 GMT+1:00) Windhoek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+1:00 GMT+2:00) Amsterdam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+2:00 GMT+2:00) Tripoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+2:00 GMT+3:00) Israel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BigMachines__Unit_System__c</fullName>
        <description>This picklist contains the possible currency preferences that are available to BigMachines users.  Do not modify this list.</description>
        <label>Unit System</label>
        <picklist>
            <picklistValues>
                <fullName>System Default</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metric</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BigMachines__User_Groups__c</fullName>
        <description>This picklist contains the possible user groups to which BigMachines users may belong.  You will need to manually update this picklist with the possible options that are available in your BigMachines instance.  The values in this list should be the variable name, not the display name, of the BigMachines user groups.</description>
        <label>User Groups</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DM_U_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>DM U External ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Pivotal ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_User_ID__c</fullName>
        <description>This field will have &apos;00&apos; Pivotal Ids instead of &apos;0x&apos; Pivotal Ids</description>
        <externalId>true</externalId>
        <label>External User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Racine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milwaukee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuffen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Region__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>notContain</operation>
            <value>training</value>
        </filters>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_Industrial_Sales_Managers</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.FORECAST_ENABLED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>equals</operation>
            <value>jbroadway@badgermeter.com,mclayton@badgermeter.com,gdurand@badgermeter.com</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>equals</operation>
            <value>aeasterley@badgermeter.com,berickson@badgermeter.com,pespinoza@badgermeter.com</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>equals</operation>
            <value>jhuff@badgermeter.com,mleveille@badgermeter.com,mmccoy@badgermeter.com</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>equals</operation>
            <value>jpeterson@badgermeter.com,breynolds@badgermeter.com,ksymens@badgermeter.com</value>
        </filters>
        <label>All Industrial Sales Managers</label>
    </listViews>
    <listViews>
        <fullName>All_Marketing_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Marketing</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>notContain</operation>
            <value>training</value>
        </filters>
        <label>All Marketing Users</label>
    </listViews>
    <listViews>
        <fullName>All_Racine_Customer_Service_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Racine</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Service</value>
        </filters>
        <label>All Racine Customer Service Users</label>
    </listViews>
    <listViews>
        <fullName>All_Scottsdale_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Scottsdale</value>
        </filters>
        <label>All Scottsdale Users</label>
    </listViews>
    <listViews>
        <fullName>All_Wyco_Users</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>equals</operation>
            <value>jwalsh@badgermeter.com,dlindley@badgermeter.com,gperona@badgermter.com</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>equals</operation>
            <value>pjaworski@badgermeter.com,sdake@badgermeter.com,tgrant@badgermeter.com</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>equals</operation>
            <value>dcariello@badgermeter.com</value>
        </filters>
        <label>All Wyco Users</label>
    </listViews>
    <listViews>
        <fullName>Sales_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>training</value>
        </filters>
        <label>Sales Users</label>
    </listViews>
    <listViews>
        <fullName>legacy_admin_view</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>admin</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>lessThan</operation>
            <value>9/15/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>legacy admin view</label>
    </listViews>
    <validationRules>
        <fullName>BigMachines__BigMachines_Association_to_Organization</fullName>
        <active>true</active>
        <description>Changing the Association to Organization will break the link this user has to BigMachines. While it will be possible to provision the user once this value has changed, the new user will no longer be the owner of any previously created quotes.</description>
        <errorConditionFormula>AND(BigMachines__Provisioned__c, ISCHANGED(BigMachines__Association_to_Organization__c), NOT(ISBLANK(PRIORVALUE(BigMachines__Association_to_Organization__c))))</errorConditionFormula>
        <errorMessage>It is highly recommended that you consult a BigMachines administrator before changing the value of Association to Organization for this linked user. To change the association, you must first deselect the checkbox &quot;Provisioned in BigMachines&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BigMachines__BigMachines_First_Name</fullName>
        <active>true</active>
        <description>In order to provision users in BigMachines, they must have a first name.</description>
        <errorConditionFormula>AND(len(FirstName ) = 0,  BigMachines__Provisioned__c = true)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Users are required to have a first name in BigMachines.  Please provide a value for this field in order to provision this user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BigMachines__BigMachines_Linked_Username</fullName>
        <active>true</active>
        <description>Changing the Salesforce username will break the link this user has to BigMachines.  In order to reestablish that link, a BigMachines administrator will need to manually change the login of the BigMachines user to match the new Salesforce username.</description>
        <errorConditionFormula>AND(BigMachines__Provisioned__c, ISCHANGED(Username),  NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>It is highly recommended that you consult a BigMachines administrator before changing the value of Username for this linked user.  To change the username, you must first deselect the checkbox &quot;Provisioned in BigMachines&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BigMachines__BigMachines_Login</fullName>
        <active>true</active>
        <description>BigMachines generates a login for users based on the Username field.  In order for the BigMachines login to be valid, it must begin with a letter.  Check out the BigMachines Login field for more information on how the login is generated.</description>
        <errorConditionFormula>AND(OR(LEN(BigMachines__Login__c) = 0, ISNUMBER(LEFT( BigMachines__Login__c, 1))),  BigMachines__Provisioned__c = true)</errorConditionFormula>
        <errorDisplayField>Username</errorDisplayField>
        <errorMessage>This user cannot be provisioned in BigMachines because the username is not being converted into a valid BigMachines login.  BigMachines logins are based on the part of the username before the &apos;@&apos; symbol and must begin with a letter.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BigMachines__BigMachines_Partner_Users</fullName>
        <active>true</active>
        <description>In order to link Partner Users, the Salesforce Account must first be linked to a BigMachines Partner Organization.  To do this, enter the variable name of the partner organization in the &quot;BigMachines Partner Organization&quot; field on the account.</description>
        <errorConditionFormula>AND(ISPICKVAL( BigMachines__Association_to_Organization__c , &quot;Partner User&quot;),  LEN( Contact.Account.BigMachines__Partner_Organization__c ) = 0)</errorConditionFormula>
        <errorDisplayField>BigMachines__Association_to_Organization__c</errorDisplayField>
        <errorMessage>In order to link to a BigMachines Partner User, this Salesforce User must be tied to an Account that is mapped to a Partner Organization in BigMachines.  Please consult with your System administrator for further details.</errorMessage>
    </validationRules>
</CustomObject>